--- a/packages/snap/tsconfig.json
+++ b/packages/snap/tsconfig.json
@@ -1,22 +1,7 @@
 {
-    "extends": "../tsconfig.json",
-    "compilerOptions": {
-        "allowJs": true,
-        "baseUrl": "./",
-        "composite": true,
-        "declaration": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "incremental": true,
-        "module": "ES2020",
-        "moduleResolution": "node",
-        "outDir": "./",
-        "resolveJsonModule": true,
-        "rootDir": "./src",
-        "sourceMap": true,
-        "strict": true,
-        "target": "es2017"
-      },
-      "include": [],
-      "references": []
-  }
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+      "rootDir": "src",
+      "outDir": "dist"
+  },
+}
