--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -35,7 +35,9 @@
     "@astrox/icsnap-types": "^0.0.1",
     "@dfinity/identity": "^0.11.0",
     "@metamask/key-tree": "^3.0.1",
+    "@types/deepmerge": "^2.2.0",
     "@types/secp256k1": "^4.0.3",
+    "deepmerge": "^4.2.2",
     "secp256k1": "^4.0.3"
   }
 }
