--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "noEmit": false,
       "esModuleInterop": true,
       "resolveJsonModule": true,
+      "skipLibCheck": true,
       "importHelpers": true,
       "baseUrl": "scripts",
       "paths": {
