--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -31,5 +31,8 @@
     "lint:style:fix": "yarn run lint:style --fix",
     "test": "exit 0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@dfinity/agent": "^0.11.0",
+    "@dfinity/identity": "^0.11.0"
+  }
 }
