--- a/package.json
+++ b/package.json
@@ -7,12 +7,22 @@
     "packages/*"
   ],
   "scripts": {
-    "build:ts": "tsc -b tsconfig.json"
+    "build:snap": "lerna run build --scope @astrox/icsnap",
+    "build:types": "cd packages/types && tsc -b tsconfig.json",
+    "build:adapter": "cd packages/adapter && tsc -b tsconfig.json",
+    "build:example": "cd packages/example && rm -rf node_modules && yarn install",
+    "clean": "./scripts/clean.sh",
+    "build:all": "yarn build:types && yarn build:snap && yarn build:adapter && yarn build:example",
+    "start:snap": "lerna run serve --scope @astrox/icsnap",
+    "start:example:local": "cd packages/example && yarn run dev",
+    "bootstrap": "lerna bootstrap",
+    "demo:local": "concurrently  --raw --kill-others \"yarn run start:snap\" \"yarn run start:example:local\""
   },
   "devDependencies": {
     "lerna": "^4.0.0"
   },
   "dependencies": {
+    "concurrently": "^7.1.0",
     "tslib": "^2.3.1"
   }
 }
