--- a/packages/adapter/package.json
+++ b/packages/adapter/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@astrox/icsnap-adapter",
   "version": "0.0.1",
-  "main": "./build/index.js",
-  "module": "./build/index.js",
-  "types": "./build/index.d.ts",
+  "main": "build/index.js",
+  "module": "build/index.js",
+  "types": "build/index.d.ts",
   "author": "AstroX <dev@astrox.network>",
   "license": "(Apache-2.0 AND MIT)",
   "private": false,
@@ -21,14 +21,6 @@
   },
   "description": "Adapter for installing ICSnap",
   "scripts": {
-    "prebuild": "rm -rf build",
-    "build": "yarn run build:lib && yarn run build:types",
-    "build:lib": "tsc --build tsconfig.json",
-    "build:types": "tsc --emitDeclarationOnly",
-    "lint": "yarn run lint:style && yarn run lint:types",
-    "lint:types": "tsc --noEmit --pretty",
-    "lint:style": "eslint --color 'src/**/*.{js,ts,tsx}'",
-    "lint:style:fix": "yarn run lint:style --fix",
     "test": "exit 0"
   },
   "dependencies": {
