--- a/packages/adapter/tsconfig.json
+++ b/packages/adapter/tsconfig.json
@@ -1,24 +1,8 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "allowJs": true,
-        "baseUrl": "./",
-        "composite": true,
-        "declaration": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "incremental": true,
-        "module": "ES2020",
-        "moduleResolution": "node",
-        "outDir": "./",
-        "resolveJsonModule": true,
-        "rootDir": "./src",
-        "sourceMap": true,
-        "strict": true,
-        "target": "es2017",
-        "typeRoots": ["node_modules/@types", "src/types"],
-        "lib": ["es5", "es6", "dom"],
-      },
-      "include": [],
-      "references": []
+        "rootDir": "src",
+        "outDir": "build"
+    },
+    "exclude": ["build"]
   }
