--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,12 +1,10 @@
 {
   "name": "@astrox/icsnap",
   "version": "0.0.1",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "private": false,
+  "main": "build/index.js",
   "author": "AstroX <dev@astrox.network>",
   "license": "(Apache-2.0 AND MIT)",
-  "private": false,
   "homepage": "https://github.com/AstroxNetwork",
   "keywords": [
     "dfinity",
@@ -16,28 +14,34 @@
     "snap",
     "dapp"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
   "description": "Adapter for installing ICSnap",
   "scripts": {
-    "prebuild": "rm -rf build",
-    "build": "yarn run build:lib && yarn run build:types",
-    "build:lib": "tsc --build tsconfig.json",
-    "build:types": "tsc --emitDeclarationOnly",
-    "lint": "yarn run lint:style && yarn run lint:types",
-    "lint:types": "tsc --noEmit --pretty",
-    "lint:style": "eslint --color 'src/**/*.{js,ts,tsx}'",
-    "lint:style:fix": "yarn run lint:style --fix",
-    "test": "exit 0"
+    "build": "yarn run build:tsc && yarn run build:snap",
+    "build:tsc": "tsc -p tsconfig.build.json --pretty --outDir build",
+    "build:snap": "yarn build:snap:bundle && yarn build:snap:postprocess && yarn build:snap:eval",
+    "build:snap:bundle": "mm-snap build --verboseErrors  --stripComments --eval false",
+    "build:snap:postprocess": "node ./post-process.js && mm-snap manifest --fix",
+    "build:snap:eval": "mm-snap eval -b dist/bundle.js --verboseErrors",
+    "watch": "concurrently  --raw --kill-others \"yarn run watch:tsc\" \"yarn run watch:snap\" \"yarn run serve\"",
+    "watch:tsc": "yarn run build:tsc --watch",
+    "watch:snap": "mm-snap watch --sourceMaps -s build/index.js",
+    "serve": "mm-snap serve",
+    "test": "yarn run test:unit",
+    "test:unit": "mocha --colors -r ts-node/register \"test/unit/**/*.test.ts\"",
+    "build:snap:bundle:mm-snap": "mm-snap build --sourceMaps --strip --verboseErrors --eval false",
+    "eval:snap": "mm-snap eval -b dist/bundle.js --verboseErrors",
+    "prepublish": "yarn run build"
   },
   "dependencies": {
     "@astrox/icsnap-types": "^0.0.1",
     "@dfinity/identity": "^0.11.0",
     "@metamask/key-tree": "^3.0.1",
+    "@metamask/snaps-cli": "^0.10.7",
     "@types/deepmerge": "^2.2.0",
     "@types/secp256k1": "^4.0.3",
     "deepmerge": "^4.2.2",
-    "secp256k1": "^4.0.3"
+    "secp256k1": "^4.0.3",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
