--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compileOnSave": false,
     "compilerOptions": {
       "target": "es2017",
-      "lib": ["es2017", "esnext.asynciterable","dom"],
+      "lib": ["es2017","dom"],
       "typeRoots": ["node_modules/@types"],
       "allowSyntheticDefaultImports": true,
       "composite": true,
@@ -16,7 +16,7 @@
       "pretty": true,
       "sourceMap": true,
       "declaration": true,
-      "outDir": "dist",
+      "outDir": "build",
       "allowJs": true,
       "noEmit": false,
       "esModuleInterop": true,
@@ -30,6 +30,12 @@
     },
     "references": [
       { "path": "packages/types" },
+      { "path": "packages/snap" },
+      { "path": "packages/adapter" },
+    ],
+    "exclude": [
+      "packages/example/vite.config.ts",
+      "packages/example/tsconfig.json",
     ]
   }
   
