--- a/packages/snap/tsconfig.json
+++ b/packages/snap/tsconfig.json
@@ -6,7 +6,9 @@
       "*": [
         "../../node_modules"
       ],
-      
+      "@zondax/filecoin-signing-tools/js": [
+        "./@types/filecoin-signing-tools"
+      ],
     },
     "outDir": "./build",
     "typeRoots": [
