--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:adapter": "cd packages/adapter && tsc -b tsconfig.json",
     "build:example": "cd packages/example && rm -rf node_modules && yarn install",
     "clean": "./scripts/clean.sh",
-    "build:all": "yarn build:types && yarn build:snap && yarn build:adapter && yarn build:example",
+    "build:all": "yarn clean && yarn build:types && yarn build:snap && yarn build:adapter && yarn build:example",
     "start:snap": "lerna run serve --scope @astrox/icsnap",
     "start:example:local": "cd packages/example && yarn run dev",
     "bootstrap": "lerna bootstrap",
