--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
+    "prod": "SNAP_ID=npm:@astrox/icsnap vite serve",
     "build": "tsc && vite build",
     "serve": "vite preview"
   },
@@ -22,7 +23,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@types/node": "^16.11.6",
+    "@types/node": "^18.0.0",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@vitejs/plugin-react-refresh": "^1.3.6",
