--- a/packages/example/tsconfig.json
+++ b/packages/example/tsconfig.json
@@ -7,7 +7,8 @@
       "ESNext"
     ],
     "types": [
-      "vite/client"
+      "vite/client",
+      "node"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -21,6 +22,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
+    
     "baseUrl": ".",
     "paths": {
       "canisters/counter": [
