--- a/packages/adapter/package.json
+++ b/packages/adapter/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "@astrox/icsnap-types": "^0.0.1",
-    "@dfinity/agent": "^0.11.0",
-    "@dfinity/identity": "^0.11.0"
+    "@dfinity/agent": "^0.11.3",
+    "@dfinity/identity": "^0.11.3",
+    "@dfinity/candid": "^0.11.3"
   }
 }
