--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
   "packages": [
-    "packages/*"
+    "packages/adapter",
+    "packages/snap",
+    "packages/types"
   ],
   "version": "0.0.0"
 }
