--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "author": "AstroX <dev@astrox.network>",
   "license": "(Apache-2.0 AND MIT)",
   "workspaces": [
-    "packages/adapter",
-    "packages/snap",
-    "packages/exmaple"
+    "packages/*"
   ],
   "scripts": {
     "build:snap": "lerna run build --scope @astrox/icsnap",
