--- a/packages/adapter/package.json
+++ b/packages/adapter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@astrox/icsnap-adapter",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "main": "build/index.js",
   "module": "build/index.js",
   "types": "build/index.d.ts",
@@ -24,9 +24,9 @@
     "test": "exit 0"
   },
   "dependencies": {
-    "@astrox/icsnap-types": "^0.0.1",
+    "@astrox/icsnap-types": "^0.0.3",
     "@dfinity/agent": "^0.11.3",
-    "@dfinity/identity": "^0.11.3",
-    "@dfinity/candid": "^0.11.3"
+    "@dfinity/candid": "^0.11.3",
+    "@dfinity/identity": "^0.11.3"
   }
 }
