:rewind: bump version

--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -49,5 +49,6 @@
     "secp256k1": "^4.0.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
-  }
+  },
+  "gitHead": "d9ac0fd3388bab84a84c1ad323c2e54ce2ab1711"
 }
