--- a/packages/adapter/package.json
+++ b/packages/adapter/package.json
@@ -28,5 +28,6 @@
     "@dfinity/agent": "^0.11.3",
     "@dfinity/candid": "^0.11.3",
     "@dfinity/identity": "^0.11.3"
-  }
+  },
+  "gitHead": "d9ac0fd3388bab84a84c1ad323c2e54ce2ab1711"
 }
