--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -41,8 +41,9 @@
     "@dfinity/agent": "0.11.3",
     "@dfinity/candid": "^0.11.3",
     "@dfinity/identity": "^0.11.3",
-    "@metamask/key-tree": "^3.0.1",
-    "@metamask/snaps-cli": "^0.10.7",
+    "@metamask/key-tree": "^4.0.0",
+    "@metamask/key-tree-old": "npm:@metamask/key-tree@^3.0.1",
+    "@metamask/snaps-cli": "^0.18.1",
     "@types/deepmerge": "^2.2.0",
     "@types/secp256k1": "^4.0.3",
     "deepmerge": "^4.2.2",
