--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -7,6 +7,10 @@
     "dist",
     "snap.manifest.json"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AstroxNetwork/ICSnap.git"
+  },
   "author": "AstroX <dev@astrox.network>",
   "license": "(Apache-2.0 AND MIT)",
   "homepage": "https://github.com/AstroxNetwork",
@@ -38,9 +42,10 @@
   },
   "dependencies": {
     "@astrox/icsnap-types": "^0.0.14",
-    "@dfinity/agent": "0.11.3",
-    "@dfinity/candid": "^0.11.3",
-    "@dfinity/identity": "^0.11.3",
+    "@dfinity/agent": "0.15.1",
+    "@dfinity/candid": "^0.15.1",
+    "@dfinity/identity": "^0.15.1",
+    "@dfinity/identity-secp256k1": "0.15.1",
     "@metamask/key-tree": "^6.0.0",
     "@metamask/key-tree-old": "npm:@metamask/key-tree@^3.0.1",
     "@metamask/snaps-cli": "^0.18.1",
